syntax = "proto3";

option go_package = "gitlab.ozon.dev/davidokk/reminder-manager/data-service/pkg/api;api";

import "google/protobuf/timestamp.proto";
  
service Data {
  rpc ReminderList(ReminderListRequest) returns (ReminderListResponse) {}

  rpc ReminderGet(ReminderGetRequest) returns (ReminderGetResponse) {}

  rpc ReminderCreate(ReminderCreateRequest) returns (ReminderCreateResponse) {}

  rpc ReminderUpdate(ReminderUpdateRequest) returns (ReminderUpdateResponse) {}

  rpc ReminderRemove(ReminderRemoveRequest) returns (ReminderRemoveResponse) {}
}

message Reminder {
  google.protobuf.Timestamp date = 1;
  string text = 2;
  uint64 id = 3;
}

message ReminderGetRequest {
  uint64 id = 1;
}
message ReminderGetResponse {
  Reminder reminder = 1;
}

message ReminderListRequest {}
message ReminderListResponse {
  repeated Reminder reminders = 1;
}

message ReminderCreateRequest {
  google.protobuf.Timestamp date = 1;
  string text = 2;
}
message ReminderCreateResponse {
  uint64 id = 1;
}

message ReminderUpdateRequest {
  uint64 id = 1;
  string text = 2;
}
message ReminderUpdateResponse {}

message ReminderRemoveRequest {
  uint64 id = 1;
}
message ReminderRemoveResponse {}
